<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ismael.com.uedcontrollite.NavigationDrawerActivity">


    <Button
        android:text="@string/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/btnProfile" />


    <Button
        android:text="@string/btnActivities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnProfile"
        android:layout_marginBottom="20dp"
        android:id="@+id/btnActivities" />

    <Button
        android:text="@string/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnActivities"
        android:layout_marginBottom="20dp"
        android:id="@+id/btnMenu" />

    <Button
        android:text="@string/btnRecomendedActivities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/btnRecomendedActivities" />

    <Button
        android:text="@string/btnChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/btnRecomendedActivities"
        android:id="@+id/btnChat" />

    <Button
        android:text="@string/btnPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnChat"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnPreferences" />

    <Button
        android:text="@string/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/btnPreferences"
        android:id="@+id/btnClose" />
</RelativeLayout>
</ScrollView>