<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorMenu"
    tools:context="ismael.com.uedcontrollite.LogInActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/uedclogo"
        android:id="@+id/imgIcon" />

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tiluser"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android="@style/error"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtUser"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/user"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tilpassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tiluser"
        android="@style/error"
        app:counterMaxLength="20"


        app:counterEnabled="true"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/edtUser"
            android:id="@+id/edtPass"
            android:hint="@string/pass"
            android:maxLength="20"/>


    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/btnEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tilpassword"
        android:id="@+id/btnEntry"
        android:layout_weight="1" />


</RelativeLayout>
